[workspace]
resolver = "2"
members = [
    "crates/*",
    ".",
]

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.unreachable_pub = "warn"
rustdoc.all = "warn"
rust.unused_must_use = "deny"
rust.rust_2018_idioms = "deny"

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.77"
homepage = "https://github.com/latticexyz/redstone"
repository = "https://github.com/latticexyz/redstone-sequencer"

[workspace.dependencies]
reth = {git = "https://github.com/paradigmxyz/reth", rev = "d5858adc0"}
reth-basic-payload-builder = {git = "https://github.com/paradigmxyz/reth", rev = "d5858adc0"}
reth-db = {git = "https://github.com/paradigmxyz/reth", rev = "d5858adc0"}
reth-network = {git = "https://github.com/paradigmxyz/reth", rev = "d5858adc0"}
reth-node-builder = {git = "https://github.com/paradigmxyz/reth", rev = "d5858adc0"}
reth-node-api = {git = "https://github.com/paradigmxyz/reth", rev = "d5858adc0"}
reth-optimism-payload-builder = {git = "https://github.com/paradigmxyz/reth", rev = "d5858adc0"}
reth-payload-builder = {git = "https://github.com/paradigmxyz/reth", rev = "d5858adc0"}
reth-primitives = {git = "https://github.com/paradigmxyz/reth", rev = "d5858adc0"}
reth-provider = {git = "https://github.com/paradigmxyz/reth", rev = "d5858adc0"}
reth-revm = {git = "https://github.com/paradigmxyz/reth", rev = "d5858adc0"}
reth-rpc = {git = "https://github.com/paradigmxyz/reth", rev = "d5858adc0"}
reth-rpc-api = {git = "https://github.com/paradigmxyz/reth", rev = "d5858adc0"}
reth-rpc-types = {git = "https://github.com/paradigmxyz/reth", rev = "d5858adc0"}
reth-rpc-types-compat = {git = "https://github.com/paradigmxyz/reth", rev = "d5858adc0"}
reth-tracing = {git = "https://github.com/paradigmxyz/reth", rev = "d5858adc0"}
reth-transaction-pool = {git = "https://github.com/paradigmxyz/reth", rev = "d5858adc0"}

# revm
revm = { version = "8.0.0", features = [
    "std",
    "secp256k1",
], default-features = false }
revm-primitives = { version = "3.1.0", features = [
    "std",
], default-features = false }
revm-inspectors = { git = "https://github.com/paradigmxyz/evm-inspectors", rev = "735f67c" }


# misc
clap = "4"
eyre = "0.6"
parking_lot = "0.12"

# async
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
futures-executor = "0.3"
futures-utils-wasm = "0.1"

hyper = { version = "1.2", default-features = false }
hyper-util = "0.1"
http-body-util = "0.1"
tokio = "1"
tokio-util = "0.7"
tokio-stream = "0.1"
tower = { version = "0.4", features = ["util"] }

# rpc
jsonrpsee = "0.22"
jsonrpsee-core = "0.22"
jsonrpsee-types = "0.22"


# tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# misc
auto_impl = "1.2"
base64 = "0.22"
bimap = "0.6"
home = "0.5"
itertools = "0.12"
once_cell = { version = "1.19", default-features = false }
pin-project = "1.1"
rand = "0.8"
reqwest = { version = "0.12", default-features = false }
semver = "1.0"
thiserror = "1.0"
thiserror-no-std = "2.0.2"
url = "2.5"
derive_more = "0.99.17"

## serde
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

## misc-testing
arbitrary = "1.3"
assert_matches = "1.5"
proptest = "1.4"
proptest-derive = "0.4"
serial_test = "3.0"
similar-asserts = "1.5"
tempfile = "3.10"

