[package]
name = "node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-primitives.workspace = true
alloy-rpc-types.workspace = true
alloy-rpc-types-engine.workspace = true
async-trait.workspace = true
http = "^0.2"
jsonrpsee.workspace = true
jsonrpsee.features = ["macros", "server", "client", "async-client"]
reth-primitives.workspace = true
reth-node-api.workspace = true
reth-node-optimism.workspace = true
reth-rpc.workspace = true
reth-rpc-api.workspace = true
reth-rpc-api.features = ["client"]
reth-rpc-types.workspace = true
serde.workspace = true
serde.features = ["derive"]
serde_json.workspace = true
tower.workspace = true
