[package]
name = "node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-primitives.workspace = true
alloy-rpc-types.workspace = true
alloy-rpc-types-engine.workspace = true
async-trait.workspace = true
http = "0.2.8"
http-body = "0.4.5"
jsonrpsee.workspace = true
reth-primitives.workspace = true
reth-node-api.workspace = true
reth-node-optimism.workspace = true
reth-rpc.workspace = true
reth-rpc-api.workspace = true
reth-rpc-types.workspace = true
serde.workspace = true
serde_json.workspace = true
tower.workspace = true
tracing.workspace = true


alloy-primitives.features = ["ssz"]
alloy-rpc-types.features = ["ssz"]
alloy-rpc-types-engine.features = ["ssz"]
jsonrpsee.features = ["macros", "server", "client", "async-client"]
reth-node-optimism.features = ["optimism"]
reth-rpc-api.features = ["client"]
reth-rpc-types.features = ["ssz"]
serde.features = ["derive"]