[package]
name = "redstone-sequencer-lite"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
# reth
reth.workspace = true
reth-basic-payload-builder.workspace = true
reth-db.workspace = true
reth-engine-primitives.workspace = true
reth-network.workspace = true
reth-node-builder.workspace = true
reth-node-api.workspace = true
reth-optimism-payload-builder.workspace = true
reth-payload-builder.workspace = true
reth-primitives.workspace = true
reth-provider.workspace = true
reth-revm.workspace = true
reth-rpc.workspace = true
reth-rpc-api.workspace = true
reth-rpc-types.workspace = true
reth-rpc-types-compat.workspace = true
reth-tracing.workspace = true
reth-transaction-pool.workspace = true
revm.workspace = true

# alloy
alloy-eips.workspace = true
alloy-rlp.workspace = true
alloy-rpc-types.workspace = true
alloy-rpc-types-engine.workspace = true
alloy-serde.workspace = true

# async
async-trait.workspace = true
hyper.workspace = true
http = "0.2.8"
http-body = "0.4.5"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"]}

# misc
clap.workspace = true
eyre.workspace = true
futures.workspace = true
jsonrpsee.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
structopt.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true

dotenv = "^0.15"
pretty_env_logger = "^0.5"

jsonrpsee.features = ["macros", "server"]
tokio.features = ["sync"]

[dev-dependencies]
reth-db.workspace = true

[features]
default = [
    "reth/optimism",
    
    "reth-optimism-payload-builder/optimism",
    "reth-primitives/optimism",
    "reth-provider/optimism",
    "reth-revm/optimism",
    "reth-rpc-types-compat/optimism",
    "reth-rpc/optimism",
]
